--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,4 +23,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ligengxin96/ffmpeg-env:1.0.3
+          tags: ligengxin96/ffmpeg-cuda11:1.0.0
