--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ name: Build And Publish Docker Image
 on:
   push:
     branches:
-      - main
+      - arm
     paths-ignore:
       - README.md
 
@@ -11,6 +11,9 @@ jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        architecture: [arm64]
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
@@ -23,4 +26,4 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          tags: ligengxin96/ffmpeg-cuda11:1.1.0
+          tags: ligengxin96/ffmpeg-cuda11-arm:1.0.0
